Bug 421873 - Korganizes crashes when deleting event template
Summary: Korganizes crashes when deleting event template
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.12.3
Platform: Debian stable Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2020-05-21 17:38 UTC by Juan M. N.
Modified: 2020-05-22 04:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juan M. N. 2020-05-21 17:38:36 UTC
Application: korganizer (5.12.3)

Qt Version: 5.12.5
Frameworks Version: 5.62.0
Operating System: Linux 5.6.0-1-amd64 x86_64
Distribution: Debian GNU/Linux bullseye/sid

-- Information about the crash:
- What I was doing when the application crashed:
I deleted an event template I had just created.

- Custom settings of the application:
This only happens when there's just one template and thus the list gets empty after the fact.

The debugger says that the crash happens on src/templatemanagementdialog.cpp:186 at libkf5incidenceeditor-19.08.3. The problem seems to be that the program tries to select the item 0 in the list, which is empty, but I don't know what it should do instead, or even if it should do something.

The crash can be reproduced every time.

-- Backtrace:
Application: KOrganizer (korganizer), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f9e30858a80 (LWP 24728))]

Thread 8 (Thread 0x7f9e13fff700 (LWP 24740)):
#0  0x00007f9e35a2e5e5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f9e1e6a99fb in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#2  0x00007f9e1e6a9617 in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#3  0x00007f9e35a27f27 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f9e3782231f in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 7 (Thread 0x7f9e1ce18700 (LWP 24739)):
#0  0x00007f9e35a2e5e5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f9e1e6a99fb in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#2  0x00007f9e1e6a9617 in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#3  0x00007f9e35a27f27 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f9e3782231f in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 6 (Thread 0x7f9e1d619700 (LWP 24738)):
#0  0x00007f9e35a2e5e5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f9e1e6a99fb in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#2  0x00007f9e1e6a9617 in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#3  0x00007f9e35a27f27 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f9e3782231f in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 5 (Thread 0x7f9e1de1a700 (LWP 24737)):
#0  0x00007f9e35a2e5e5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007f9e1e6a99fb in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#2  0x00007f9e1e6a9617 in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#3  0x00007f9e35a27f27 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#4  0x00007f9e3782231f in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 4 (Thread 0x7f9e2d2f6700 (LWP 24734)):
#0  0x00007f9e3781360c in read () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f9e3511ff5f in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f9e350d834e in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f9e350d87a2 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f9e350d891f in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f9e37da17db in QEventDispatcherGlib::processEvents (this=0x7f9e18000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f9e37d4a6db in QEventLoop::exec (this=this@entry=0x7f9e2d2f5b20, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#7  0x00007f9e37b8b6f1 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#8  0x00007f9e37b8c872 in QThreadPrivate::start (arg=0x5633136a9ef0) at thread/qthread_unix.cpp:361
#9  0x00007f9e35a27f27 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#10 0x00007f9e3782231f in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 3 (Thread 0x7f9e2daf7700 (LWP 24731)):
#0  0x00007f9e3781360c in read () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f9e3511ff5f in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f9e350d834e in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f9e350d87a2 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f9e350d891f in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f9e37da17db in QEventDispatcherGlib::processEvents (this=0x7f9e24000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f9e37d4a6db in QEventLoop::exec (this=this@entry=0x7f9e2daf6b20, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#7  0x00007f9e37b8b6f1 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#8  0x00007f9e37b8c872 in QThreadPrivate::start (arg=0x5633136ada80) at thread/qthread_unix.cpp:361
#9  0x00007f9e35a27f27 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#10 0x00007f9e3782231f in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 2 (Thread 0x7f9e2ed08700 (LWP 24730)):
#0  0x00007f9e3781360c in read () from /lib/x86_64-linux-gnu/libc.so.6
#1  0x00007f9e3511ff5f in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f9e350d834e in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f9e350d87a2 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f9e350d891f in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f9e37da17db in QEventDispatcherGlib::processEvents (this=0x7f9e20000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f9e37d4a6db in QEventLoop::exec (this=this@entry=0x7f9e2ed07af0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#7  0x00007f9e37b8b6f1 in QThread::exec (this=this@entry=0x7f9e374fed80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#8  0x00007f9e3747d4e6 in QDBusConnectionManager::run (this=0x7f9e374fed80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:178
#9  0x00007f9e37b8c872 in QThreadPrivate::start (arg=0x7f9e374fed80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:361
#10 0x00007f9e35a27f27 in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#11 0x00007f9e3782231f in clone () from /lib/x86_64-linux-gnu/libc.so.6

Thread 1 (Thread 0x7f9e30858a80 (LWP 24728)):
[KCrash Handler]
#6  0x00007f9e3740b2d0 in QListWidgetItem::setSelected (aselect=<optimized out>, this=<optimized out>) at ./src/templatemanagementdialog.cpp:186
#7  IncidenceEditorNG::TemplateManagementDialog::slotRemoveTemplate (this=0x563314d40460) at ./src/templatemanagementdialog.cpp:186
#8  0x00007f9e37d764e8 in QtPrivate::QSlotObjectBase::call (a=0x7ffc4c4004c0, r=0x563314d40460, this=0x563314dcaa60) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#9  QMetaObject::activate (sender=0x563314f33330, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3783
#10 0x00007f9e3883b2b2 in QAbstractButton::clicked (this=this@entry=0x563314f33330, _t1=<optimized out>) at .moc/moc_qabstractbutton.cpp:312
#11 0x00007f9e3883b4ca in QAbstractButtonPrivate::emitClicked (this=0x563315019460) at widgets/qabstractbutton.cpp:414
#12 0x00007f9e3883c86f in QAbstractButtonPrivate::click (this=0x563315019460) at widgets/qabstractbutton.cpp:407
#13 0x00007f9e3883ca35 in QAbstractButton::mouseReleaseEvent (this=0x563314f33330, e=0x7ffc4c400a30) at widgets/qabstractbutton.cpp:1011
#14 0x00007f9e3878a776 in QWidget::event (this=0x563314f33330, event=0x7ffc4c400a30) at kernel/qwidget.cpp:8965
#15 0x00007f9e38748c32 in QApplicationPrivate::notify_helper (this=this@entry=0x56331360fab0, receiver=receiver@entry=0x563314f33330, e=e@entry=0x7ffc4c400a30) at kernel/qapplication.cpp:3700
#16 0x00007f9e387523e3 in QApplication::notify (this=<optimized out>, receiver=0x563314f33330, e=0x7ffc4c400a30) at kernel/qapplication.cpp:3160
#17 0x00007f9e37d4ba52 in QCoreApplication::notifyInternal2 (receiver=0x563314f33330, event=0x7ffc4c400a30) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:142
#18 0x00007f9e387514f3 in QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x563314f33330, event=event@entry=0x7ffc4c400a30, alienWidget=alienWidget@entry=0x563314f33330, nativeWidget=0x563314d40460, buttonDown=buttonDown@entry=0x7f9e38c6b8d0 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2646
#19 0x00007f9e387a6039 in QWidgetWindow::handleMouseEvent (this=0x563314f333d0, event=0x7ffc4c400eb0) at /usr/include/c++/9/bits/atomic_base.h:413
#20 0x00007f9e387a8ec4 in QWidgetWindow::event (event=0x7ffc4c400eb0, this=0x563314f333d0) at kernel/qwidgetwindow.cpp:281
#21 QWidgetWindow::event (this=0x563314f333d0, event=0x7ffc4c400eb0) at kernel/qwidgetwindow.cpp:224
#22 0x00007f9e38748c32 in QApplicationPrivate::notify_helper (this=this@entry=0x56331360fab0, receiver=receiver@entry=0x563314f333d0, e=e@entry=0x7ffc4c400eb0) at kernel/qapplication.cpp:3700
#23 0x00007f9e38752190 in QApplication::notify (this=0x7ffc4c402480, receiver=0x563314f333d0, e=0x7ffc4c400eb0) at kernel/qapplication.cpp:3446
#24 0x00007f9e37d4ba52 in QCoreApplication::notifyInternal2 (receiver=0x563314f333d0, event=0x7ffc4c400eb0) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:142
#25 0x00007f9e3812ca13 in QGuiApplicationPrivate::processMouseEvent (e=e@entry=0x7f9e20054ed0) at kernel/qguiapplication.cpp:2107
#26 0x00007f9e3812e26b in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x7f9e20054ed0) at kernel/qguiapplication.cpp:1842
#27 0x00007f9e38108ecb in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1151
#28 0x00007f9e30714cda in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#29 0x00007f9e350d860d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f9e350d8890 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f9e350d891f in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007f9e37da17c1 in QEventDispatcherGlib::processEvents (this=0x56331366c070, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#33 0x00007f9e37d4a6db in QEventLoop::exec (this=this@entry=0x7ffc4c401250, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#34 0x00007f9e38945e9d in QDialog::exec (this=0x563314d40460) at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#35 0x00007f9e3740eb7f in IncidenceEditorNG::IncidenceDialogPrivate::manageTemplates (this=<optimized out>) at /usr/include/c++/9/bits/atomic_base.h:413
#36 0x00007f9e3740ece6 in IncidenceEditorNG::IncidenceDialog::slotButtonClicked (this=0x5633138eebe0, button=<optimized out>) at ./src/incidencedialog.cpp:824
#37 0x00007f9e37d764e8 in QtPrivate::QSlotObjectBase::call (a=0x7ffc4c4014b0, r=0x5633138eebe0, this=0x5633147c2ba0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#38 QMetaObject::activate (sender=0x563314553720, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3783
#39 0x00007f9e388df5ef in QDialogButtonBox::clicked (this=this@entry=0x563314553720, _t1=<optimized out>, _t1@entry=0x563314555410) at .moc/moc_qdialogbuttonbox.cpp:280
#40 0x00007f9e388dfd75 in QDialogButtonBoxPrivate::_q_handleButtonClicked (this=<optimized out>) at widgets/qdialogbuttonbox.cpp:856
#41 0x00007f9e37d76388 in QMetaObject::activate (sender=0x563314555410, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3803
#42 0x00007f9e3883b2b2 in QAbstractButton::clicked (this=this@entry=0x563314555410, _t1=<optimized out>) at .moc/moc_qabstractbutton.cpp:312
#43 0x00007f9e3883b4ca in QAbstractButtonPrivate::emitClicked (this=0x5633145558b0) at widgets/qabstractbutton.cpp:414
#44 0x00007f9e3883c86f in QAbstractButtonPrivate::click (this=0x5633145558b0) at widgets/qabstractbutton.cpp:407
#45 0x00007f9e3883ca35 in QAbstractButton::mouseReleaseEvent (this=0x563314555410, e=0x7ffc4c401b80) at widgets/qabstractbutton.cpp:1011
#46 0x00007f9e3878a776 in QWidget::event (this=0x563314555410, event=0x7ffc4c401b80) at kernel/qwidget.cpp:8965
#47 0x00007f9e38748c32 in QApplicationPrivate::notify_helper (this=this@entry=0x56331360fab0, receiver=receiver@entry=0x563314555410, e=e@entry=0x7ffc4c401b80) at kernel/qapplication.cpp:3700
#48 0x00007f9e387523e3 in QApplication::notify (this=<optimized out>, receiver=0x563314555410, e=0x7ffc4c401b80) at kernel/qapplication.cpp:3160
#49 0x00007f9e37d4ba52 in QCoreApplication::notifyInternal2 (receiver=0x563314555410, event=0x7ffc4c401b80) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:142
#50 0x00007f9e387514f3 in QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x563314555410, event=event@entry=0x7ffc4c401b80, alienWidget=alienWidget@entry=0x563314555410, nativeWidget=0x5633138eebe0, buttonDown=buttonDown@entry=0x7f9e38c6b8d0 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2646
#51 0x00007f9e387a6039 in QWidgetWindow::handleMouseEvent (this=0x563314cedf40, event=0x7ffc4c402000) at /usr/include/c++/9/bits/atomic_base.h:413
#52 0x00007f9e387a8ec4 in QWidgetWindow::event (event=0x7ffc4c402000, this=0x563314cedf40) at kernel/qwidgetwindow.cpp:281
#53 QWidgetWindow::event (this=0x563314cedf40, event=0x7ffc4c402000) at kernel/qwidgetwindow.cpp:224
#54 0x00007f9e38748c32 in QApplicationPrivate::notify_helper (this=this@entry=0x56331360fab0, receiver=receiver@entry=0x563314cedf40, e=e@entry=0x7ffc4c402000) at kernel/qapplication.cpp:3700
#55 0x00007f9e38752190 in QApplication::notify (this=0x7ffc4c402480, receiver=0x563314cedf40, e=0x7ffc4c402000) at kernel/qapplication.cpp:3446
#56 0x00007f9e37d4ba52 in QCoreApplication::notifyInternal2 (receiver=0x563314cedf40, event=0x7ffc4c402000) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:142
#57 0x00007f9e3812ca13 in QGuiApplicationPrivate::processMouseEvent (e=e@entry=0x563314fcb900) at kernel/qguiapplication.cpp:2107
#58 0x00007f9e3812e26b in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x563314fcb900) at kernel/qguiapplication.cpp:1842
#59 0x00007f9e38108ecb in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1151
#60 0x00007f9e30714cda in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#61 0x00007f9e350d860d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#62 0x00007f9e350d8890 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#63 0x00007f9e350d891f in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#64 0x00007f9e37da17c1 in QEventDispatcherGlib::processEvents (this=0x56331366c070, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#65 0x00007f9e37d4a6db in QEventLoop::exec (this=this@entry=0x7ffc4c4023a0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#66 0x00007f9e37d52182 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#67 0x0000563312da3187 in main (argc=<optimized out>, argv=<optimized out>) at ./src/main.cpp:64
[Inferior 1 (process 24728) detached]

Possible duplicates by query: bug 421820, bug 421812, bug 421681, bug 421668, bug 421501.

Reported using DrKonqi
Comment 1 Laurent Montel 2020-05-22 04:56:09 UTC
Git commit d507a187355fa84dfcc520e0768e693d0d6e587a by Laurent Montel.
Committed on 22/05/2020 at 04:55.
Pushed by mlaurent into branch 'release/20.04'.

Fix Bug 421873: Korganizes crashes when deleting event template

FIXED-IN: 5.14.2

M  +4    -1    src/templatemanagementdialog.cpp

https://invent.kde.org/pim/incidenceeditor/commit/d507a187355fa84dfcc520e0768e693d0d6e587a