Fix Bug 421873: Korganizes crashes when deleting event template

FIXED-IN: 5.14.2
BUG: 421873